tests/ui/dyn-keyword/suggest-dyn-on-bare-trait-in-pat.stderr
error[E0782]: expected a type, found a trait
  --> $DIR/suggest-dyn-on-bare-trait-in-pat.rs:11:9
   |
LL |         Trait::CONST => {}
   |         ^^^^^
   |
help: you can add the `dyn` keyword if you want a trait object
   |
LL |         <dyn Trait>::CONST => {}
   |         ++++      +

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0782`.
